--- a/curso-react/6_REACTROUTER/react-router/package.json
+++ b/curso-react/6_REACTROUTER/react-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "requisicoes-http",
+  "name": "react-router",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,7 @@
     "server": "json-server --watch data/db.json"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
